--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-	<link rel="icon" href="favicon.ico" type="image/x-icon">
+	<link rel="icon" href="/favicon.ico" type="image/x-icon">
 	<title>OsmiumSoftware!</title>
 </head>
 <body bgcolor="#FFFFFF" text="#000000" link="#0000FF" vlink="#0000FF">
-	<table border="0" cellspacing="0" cellpadding="0" width="80%" align="center">
+	<table border="0" cellspacing="0" cellpadding="0" width="90%" align="center">
 		<tr bgcolor="#222" height="40">
 		
 			<td align="center" valign="middle" width="140">
 				<font size="4">
-					<a href="http://old.osmiumsoft.com" style="color:#999; text-decoration:none;" onMouseOver="this.style.color='#fff';" onMouseOut="this.style.color='#999';">
+					<a href="http://old.osmiumsoft.com" style="color:#999; text-decoration:none;" >
 						OsmiumSoftware
 					</a>
 				</font>
@@ -21,16 +21,16 @@
 			<td align="center" valign="middle">
 				<font size="4">
 					<a href="http://old.osmiumsoft.com" style="color:#fff; text-decoration:none;">Home</a>&nbsp;<font color="#999" size="5">|</font>
-					<a href="http://old.osmiumsoft.com" style="color:#999; text-decoration:none;" onMouseOver="this.style.color='#fff';" onMouseOut="this.style.color='#999';">Projects</a>&nbsp;<font color="#999" size="5">|</font>
-					<a href="http://old.osmiumsoft.com" style="color:#999; text-decoration:none;" onMouseOver="this.style.color='#fff';" onMouseOut="this.style.color='#999';">Docs</a>&nbsp;<font color="#999" size="5">|</font>
-					<a href="http://old.osmiumsoft.com" style="color:#999; text-decoration:none;" onMouseOver="this.style.color='#fff';" onMouseOut="this.style.color='#999';">About</a>&nbsp;<font color="#999" size="5">|</font>
-					<a href="http://old.osmiumsoft.com" style="color:#999; text-decoration:none;" onMouseOver="this.style.color='#fff';" onMouseOut="this.style.color='#999';">Support</a>
+					<a href="http://old.osmiumsoft.com" style="color:#999; text-decoration:none;" class="navlink">Projects</a>&nbsp;<font color="#999" size="5">|</font>
+					<a href="http://old.osmiumsoft.com" style="color:#999; text-decoration:none;" class="navlink">Docs</a>&nbsp;<font color="#999" size="5">|</font>
+					<a href="http://old.osmiumsoft.com" style="color:#999; text-decoration:none;" class="navlink">About</a>&nbsp;<font color="#999" size="5">|</font>
+					<a href="http://old.osmiumsoft.com" style="color:#999; text-decoration:none;" class="navlink">Support</a>
 				</font>
 			</td>
 		</tr>
 	</table>
 	
-	<table border="0" cellspacing="0" cellpadding="20" width="80%" align="center" bgcolor="#f0f0f0">
+	<table border="0" cellspacing="0" cellpadding="20" width="90%" align="center" bgcolor="#f0f0f0">
 		<tr>
 			<td align="center" valign="top">
 				<p>
@@ -46,12 +46,14 @@
 		</tr>
 	</table>
 	
-	<table border="0" cellspacing="0" cellpadding="10" width="80%" align="center">
+	<table border="0" cellspacing="0" cellpadding="10" width="90%" align="center">
 		<tr bgcolor="#F5F5F5">
 			<td align="center" valign="middle">
 				&copy; 2025 OsmiumSoftware
 			</td>
 		</tr>
 	</table>
+	
+	<script type="text/javascript" src="/js/navhover.js"></script>
 </body>
 </html>
